# embeddings_reproduction

./: .gitattributes  .gitignore  license.md  readme.md  setup.cfg
code/: embedding_tools.py  infer_vectors.ipynb  negative_controls.ipynb  vary-n_train_infer_regress.ipynb  visualize.ipynb
code/.ipynb_checkpoints/: test_predictions-checkpoint.ipynb  train_docvec_models-checkpoint.ipynb
code/__pycache__/: .gitignore
inputs/: .gitattributes  T50.txt  T50_profet.tsv  T50_seq.pkl  T50_seq_struct.pkl  X_aaindex_64_cosine.pkl  absorption.txt  absorption_profet.tsv  absorption_seq.pkl  enantioselectivity.txt  enantioselectivity_profet.tsv  enantioselectivity_seq.pkl  localization.txt  localization_profet.tsv  localization_seq.pkl  localization_seq_struct.pkl  r1.txt  r2.txt  r3.txt  small_uniprot.txt  uniprot-reviewed-lim_sequences.txt
notebooks/: cv_embeddings.ipynb  infer_vectors.ipynb  negative_controls.ipynb  test_predictions.ipynb  train_docvec_models.ipynb  vary-d_train_infer_regress.ipynb  vary-n_train_infer_regress.ipynb  visualize.ipynb
outputs/: cv_T50.txt  cv_absorption.txt  cv_enantioselectivity.txt  cv_localization.txt  scrambled_label_test.txt  scrambled_test.txt  vary_d_test.txt  vary_n_test.txt
outputs/T50_d_embeddings/: X_original_3_7_128.pkl  X_original_3_7_16.pkl  X_original_3_7_32.pkl  X_original_3_7_320000.pkl  X_original_3_7_4.pkl  X_original_3_7_40000.pkl  X_original_3_7_8.pkl  X_original_3_7_96.pkl
outputs/T50_embeddings/: X_ChR_all_1_1.pkl  X_ChR_all_1_2.pkl  X_ChR_all_1_3.pkl  X_ChR_all_1_4.pkl  X_ChR_all_1_5.pkl  X_ChR_all_1_6.pkl  (+337 more)
(+1037 files in other folders)
