##########################
# Setup.py Configuration #
##########################
# Configuring setup()
[metadata]
name = embeddings_reproduction
version = 0.0.1-dev
url = https://github.com/fhalab/embeddings_reproduction
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
description = Code to reproduce "Learned Protein Embeddings for Machine Learning"
long_description = file: readme.md
long_description_content_type = text/markdown
keywords =
    Protein embeddings

[options]
install_requires =
    gensim
    numpy
    pandas
    scipy
    sklearn
    matplotlib
    seaborn
python_requires = >=3.5
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[bdist_wheel]
python-tag = py35
